@@ -48,8 +48,8 @@ static_dir          = static    ; default
 [JSAN::NPM]
 main = lib/Task/JooseX/CPS/All
 
-dependency            = joose                       >= 3.14.0
-dependency            = joosex-namespace-depended   >= 0.11.0
+dependency            = joose                       >= 3.16.0
+dependency            = joosex-namespace-depended   >= 0.14.0
 
 
 ;=========================================================================
