@@ -61,7 +61,7 @@ Class('JooseX.CPS.Continuation', {
         
         
         entry : function () {
-            if (this.entered)   throw "Can't re-enter the continuation + [" + this + "]"
+            if (this.entered) throw new Error("Can't re-enter the continuation + [" + this + "]")
             
             this.entered    = true
             
@@ -145,7 +145,7 @@ Class('JooseX.CPS.Continuation', {
             glob.__GLOBAL_CNT__ = scope.CONT = statement
             
             try {
-                if (func.apply(scope, args) !== undefined) throw "ERROR: Value returned from continued function (use `CONTINUE(value)` instead)" 
+                if (func.apply(scope, args) !== undefined) throw new Error("ERROR: Value returned from continued function (use `CONTINUE(value)` instead)") 
             } catch (e) {
                 
                 // if statement is already leaved, then we are just propagating the exception from the further statements
@@ -186,7 +186,7 @@ Class('JooseX.CPS.Continuation', {
             }
             
             
-            if (this.leaved)   throw "Can't re-leave the continuation + [" + this + "]"
+            if (this.leaved)   throw new Error("Can't re-leave the continuation + [" + this + "]")
 
             this.leaved         = true
             
@@ -652,7 +652,7 @@ SEE ALSO
 
 [Main documentation page](../CPS.html)
 
-General documentation for Joose: <http://openjsan.org/go/?l=Joose>
+General documentation for Joose: <http://joose.github.com/Joose/>
 
 
 
